* Close #285: Fix horizontal overflow at Import rules list dialog

--- a/src/view/Components/Import/ConditionItem/style.scss
+++ b/src/view/Components/Import/ConditionItem/style.scss
@@ -1,9 +1,10 @@
 /* Import condition item */
 .cond-item {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   flex: 1 1 auto;
   align-items: center;
+  overflow: hidden;
   font-size: 16px;
   padding: 8px 4px 8px 8px;
   border-width: 1px;
@@ -42,6 +43,8 @@
 /* Condition value */
 .cond-item__value {
   flex-grow: 1;
+  text-overflow: ellipsis;
+  overflow: hidden;
   font-weight: 400;
 }
 
